# se-toolkit-lab-4

./: .gitignore  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  docker-compose.yml  flake.nix  index.md  package-lock.json  pyproject.toml
.claude/memory/: lab-conventions.md
.claude/skills/commit/: SKILL.md
.claude/skills/get-meeting-transcript/: SKILL.md
backend/app/: auth.py  database.py  run.py
backend/app/data/: init.sql
backend/app/db/: interactions.py  items.py  learners.py
backend/app/models/: interaction.py  item.py  learner.py
backend/app/routers/: __init__.py  interactions.py  learners.py
backend/tests/e2e/: conftest.py  test_interactions.py  test_items.py
backend/tests/unit/: test_interactions.py
caddy/: Caddyfile
docs/: README.md
docs/contributing/conventions/: code.md  commits.md  git.md
docs/design/: architecture.md
docs/requirements/: vision.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx
instructors/context/lab-conventions/: conventions-wiki.md
instructors/scripts/find-broken-links/: post-process-lychee.py
lab/appendix/: environments.md  github.md  web-development.md
lab/appendix/lab-1/docs/diagrams/src/telegram/: component-diagram.puml  deployment-diagram.puml  sequence-diagram.puml
lab/appendix/lab-1/docs/diagrams/src/wildberries/: architecture-component.puml  architecture-deployment.puml  architecture-sequence.puml
lab/appendix/lab-1/docs/diagrams/src/yandex-go/: architecture-component.puml  architecture-deployment.puml  architecture-sequence.puml
lab/tasks/: setup.md
lab/tasks/optional/: task-1.md  task-4.md
lab/tasks/required/: task-1.md  task-2.md  task-3.md
src/app/models/: item.py
wiki/: computer-networks.md  docker-postgres.md  docker.md  environments.md  file-system.md  git-vscode.md  git.md  github.md  http.md  nix.md  placeholders.md  python.md  ssh.md  vm.md  vs-code.md  web-development.md
